platform/kyverno/verify-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - sentinel
      verifyImages:
        - imageReferences:
            - "ghcr.io/yamenmehdizade/risk-engine:*"
          mutateDigest: false
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/yamenmehdizade/sentinel-platform/*"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: "https://rekor.sigstore.dev"
